stop/start on overflow change

--- a/website/pages/docs/docs.module.scss
+++ b/website/pages/docs/docs.module.scss
@@ -8,7 +8,7 @@
   .wrapper {
     height: 33vw;
     width: 33vw;
-    overflow-y: auto;
+    overflow: auto;
   }
 
   .content {
