--- a/website/styles/_utils.scss
+++ b/website/styles/_utils.scss
@@ -23,7 +23,7 @@
 }
 
 .hidden-overflow {
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 .relative {
